my_manifests/network_policies/01-denyall-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyall-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: default-deny-ingress
#   namespace: advanced-policy-demo
# spec:
#   podSelector:
#     matchLabels: {}
#   policyTypes:
#   - Ingress
