my_manifests/network_policies/allow-ingress-from-ns-on-specific-port.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-on-port
spec:
  podSelector:            
    matchLabels:
      app: web 
  ingress:
    - ports:
        - protocol: TCP
          port: 80
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev
          podSelector:
            matchLabels:
              app: test
